--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: darkblue;
     background-image: url(assets/gradient-violet-bg.jpg);
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: left top;
     background-size: cover;
     height: 100%;
@@ -14,11 +14,24 @@ h1 {
     font-size: 3vw;
     font-weight: 500;
 }
-p {
+h2 {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.25vw;
-    line-height: 28px;
-    font-weight: 400;
+    font-size: 1.5vw;
+    font-weight: 600;
+    color: #434146;
+}
+h3 {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 550;
+}
+ul {
+    list-style: none;
+}
+.sectionWhite {
+    background-color: white;
 }
 /* watchParty */
 #watchPartyImage {
@@ -34,4 +47,72 @@ p {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+#watchPartyTextParagraph {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.25vw;
+    line-height: 28px;
+    font-weight: 400;
+}
+.openKastParentParent {
+    display: flex;
+    justify-content: center;
+}
+.openKastParent {
+    display: flex;
+    justify-content: center;
+    flex-direction: row ltr;
+    align-items: center;    
+    border: solid 2px #FE9000;
+    width: 200px;
+    height: 40px;
+    border-radius: 3px;
+    background-color: #FE9000;
+}
+.openKastButton a {
+    display: flex;
+    text-decoration: none;
+}
+/* featured */
+#featuredInText {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.featuredParent {
+    display: flex;
+    justify-content: center;
+    margin-left: 35px;
+    max-height: 340px;
+}
+.featured {
+    max-width: 50%;
+    display: flex; /*or inline-flex*/
+    flex-direction: row ltr;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 40px;
+    align-items: center;
+}
+#featuredItems {
+    flex-shrink: 3;
+    min-width: 250px;
+    min-height: 165px;
+}
+#pullQuote {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.1vw;
+    line-height: 28px;
+    font-weight: 100;
+    color: #434146;
+    font-style: italic;
+}
+#yahooFinance {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: .9vw;
+    line-height: 6px;
+    font-weight: 400;
+    color: #434146;
+    font-style: italic;
+    margin-left: 33%;
 }
