--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-body {
-    background-color: darkblue;
-    background-image: url(assets/gradient-violet-bg.jpg);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: left top;
-    background-size: cover;
-    height: 100%;
-    margin: 0px;
-}
 /* common properties */
 h1 {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -29,9 +19,53 @@ h3 {
 }
 ul {
     list-style: none;
+    display: flex;
 }
 .sectionWhite {
     background-color: white;
+}
+a {
+    text-decoration: none;
+    color: white;
+}
+/* header*/
+/*header {
+    height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: grid;
+    z-index: 10;
+    transition: top 0.3s ease-in-out;
+}*/
+#nav-bar {
+    background: transparent;
+    margin-left: 30px;
+    margin-top: 15px;
+    /*overflow: hidden;*/
+}
+.container {
+    display: grid;
+    grid-template-columns: 4fr 1fr 1fr 1fr 1fr; /*6fr 2fr 3fr*/
+    align-items: center;
+}
+#logo {
+    width: 25%;
+}
+ul li a {
+    padding: 2rem;
+    font-weight: bold;
+}
+/* body */
+body {
+    background-color: darkblue;
+    background-image: url(assets/gradient-violet-bg.jpg);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: left top;
+    background-size: cover;
+    height: 100%;
+    margin: 0px;
 }
 /* watchParty */
 #watchPartyImage {
