--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ a > i {
     transition-duration: .5s;
 }
 .dropdownAbout {
-    display: none; /* change to 'block' to see menu */
+    display: block; /* change to 'block' to see menu */
     position: absolute;
     top: 65px;
     padding: 15px 45px 15px 15px;
